--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ yarn-error.log
 ###> database ###
 /database/
 ###< database ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
