--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
         "symfony/maker-bundle": "^1.38",
         "symfony/phpunit-bridge": "^6.0",
         "symfony/stopwatch": "5.4.*",
-        "symfony/web-profiler-bundle": "5.4.*"
+        "symfony/web-profiler-bundle": "5.4.*",
+      "ext-json": "*"
     },
     "config": {
         "allow-plugins": {
