Add feature get cart item list

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,10 +41,9 @@ security:
         # Easy way to control access for large sections of your site
         # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/categories, roles: PUBLIC_ACCESS }
-        - { path: ^/api/products, roles: PUBLIC_ACCESS }
-        - { path: ^/api/users, roles: PUBLIC_ACCESS }
         - { path: ^/api/admin, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/users, roles: ROLE_USER }
+        - { path: ^/api, roles: PUBLIC_ACCESS }
 
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
