--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ yarn-error.log
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/
+###< lexik/jwt-authentication-bundle ###
