--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ yarn-error.log
 ###< phpunit/phpunit ###
 
 ###> lexik/jwt-authentication-bundle ###
-/config/jwt/
+/config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
