--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ yarn-error.log
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+/public/uploads
