--- a/.env.test
+++ b/.env.test
@@ -4,7 +4,7 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/api-symfony-unlock?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@database:3306/api-symfony-unlock?serverVersion=5.7&charset=utf8mb4"
 ###> symfony/sendgrid-mailer ###
 # MAILER_DSN=sendgrid://KEY@default
 ###< symfony/sendgrid-mailer ###
