add constant in BaseController

--- a/.env.test
+++ b/.env.test
@@ -6,5 +6,5 @@ PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 DATABASE_URL="mysql://root:root@database:3306/api-symfony-unlock?serverVersion=5.7&charset=utf8mb4"
 ###> symfony/sendgrid-mailer ###
-# MAILER_DSN=sendgrid://KEY@default
+MAILER_DSN=sendgrid://KEY@default
 ###< symfony/sendgrid-mailer ###
