--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
     enable_authenticator_manager: true
     encoders:
         App\Entity\User:
-            algorithm: bcrypt
+            algorithm: auto
 
         # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
