--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "jms/serializer-bundle": "^4.0",
         "lexik/jwt-authentication-bundle": "^2.14",
         "nelmio/cors-bundle": "^2.2",
+        "paypal/rest-api-sdk-php": "^1.14",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sendgrid/sendgrid": "^7.11",
