--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     images_directory: '%kernel.project_dir%/public/uploads/images'
+    app.paypal_client: '%env(resolve:PAYMENT_CLIENT)%'
+    app.paypal_secret: '%env(resolve:PAYMENT_SECRET)%'
+    app.domain: '%env(resolve:DOMAIN)%'
 services:
     # default configuration for services in *this* file
     _defaults:
